--- a/subprojects/docs/src/docs/userguide/extending-gradle/custom_tasks.adoc
+++ b/subprojects/docs/src/docs/userguide/extending-gradle/custom_tasks.adoc
@@ -443,7 +443,7 @@ Support for declaring command line options currently comes with a few limitation
 - Command line options can only be declared for custom tasks via annotation. There's no programmatic equivalent for defining options.
 - Options cannot be declared globally e.g. on a project-level or as part of a plugin.
 - When assigning an option on the command line then the task exposing the option needs to be spelled out explicitly e.g. `gradle check --tests abc` does not work even though the `check` task depends on the `test` task.
-- If you specify a task option name that conflicts with the name of a <<command_line_interface.adoc#sec:command_line_debugging, built-in Gradle option>>, use the `--` delimiter before calling your task to reference that option. For more information, see <<command_line_interface.adoc#disambiguate_task_options_from_built_in_options, Disambiguate Task Options from Built-in Options>>.
+- If you specify a task option name that conflicts with the name of a built-in Gradle option, use the `--` delimiter before calling your task to reference that option. For more information, see <<command_line_interface.adoc#disambiguate_task_options_from_built_in_options, Disambiguate Task Options from Built-in Options>>.
 
 [[worker_api]]
 == The Worker API
