--- a/subprojects/docs/src/docs/userguide/reference/command_line_interface.adoc
+++ b/subprojects/docs/src/docs/userguide/reference/command_line_interface.adoc
@@ -536,6 +536,9 @@ Specifies that the build should operate without accessing network resources. Lea
 `--refresh-dependencies`::
 Refresh the state of dependencies. Learn more about how to use this in the <<dynamic_versions.adoc#sec:controlling_dependency_caching_command_line,dependency management docs>>.
 
+`--continue`::
+Continue task execution after a task failure. See <<command_line_interface.adoc#sec:continue_build_on_failure, Continuing the build when a failure occurs>>.
+
 `-m`, `--dry-run`::
 Run Gradle with all task actions disabled. Use this to show which task would have executed.
 
