--- a/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
@@ -1,7 +1,7 @@
 [[toolchain_plugins]]
 = Toolchain Resolver Plugins
 
-Starting with Gradle version 7.6, JVM auto-provisioning logic gets decoupled from Gradle's lifecycle and moves into independent plugins, hosted on the https://plugins.gradle.org[Plugin Portal].
+Starting with Gradle version 7.6, JVM auto-provisioning logic gets decoupled from the Gradle distribution and moves into independent plugins, hosted on the https://plugins.gradle.org[Plugin Portal].
 For details on how toolchain auto-provisioning is using these plugins, see <<toolchains.adoc#sub:download_repositories,here>>.
 This page is intended for authors of such plugins.
 
@@ -14,14 +14,10 @@ Code examples will be provided in Java, but plugin authors should feel free to u
 The main thing toolchain resolver plugins need to provide is the logic of mapping a toolchain request to a download URI.
 They do this by implementing link:{javadocPath}/org/gradle/jvm/toolchain/JavaToolchainResolver.html[JavaToolchainResolver]:
 
-[source, java]
+.JavaToolchainResolverImplementation.java
+[source,java]
 ----
-public abstract class JavaToolchainResolverImplementation implements JavaToolchainResolver { // <1>
-
-    public Optional<URI> resolve(JavaToolchainRequest request) { // <2>
-        // custom mapping logic goes here
-    }
-}
+include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverImplementation.java[]
 ----
 <1> The implementation needs to be `abstract` because `JavaToolchainResolver` is a <<build_services.adoc#build_services,build service>> and those do have abstract methods with dynamic implementations provided by Gradle at runtime.
 <2> The mapping method returns a `URI` wrapped in an `Optional`, which is empty if, and only if, this resolver implementation can't provide a download link for the requested toolchain.
@@ -30,19 +26,10 @@ public abstract class JavaToolchainResolverImplementation implements JavaToolcha
 
 To wire the `JavaToolchainResolver` implementation into Gradle a settings plugin is needed (`Plugin<Settings>`):
 
-[source, java]
+.JavaToolchainResolverPlugin.java
+[source,java]
 ----
-public abstract class JavaToolchainResolverPlugin implements Plugin<Settings> { // <1>
-    @Inject
-    protected abstract JavaToolchainResolverRegistry getToolchainResolverRegistry(); // <2>
-
-    void apply(Settings settings) {
-        settings.getPlugins().apply("jvm-toolchain-management"); // <3>
-
-        JavaToolchainResolverRegistry registry = getToolchainResolverRegistry();
-        registry.register(JavaToolchainResolverImplementation.class); // <4>
-    }
-}
+include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverPlugin.java[]
 ----
 <1> The plugin needs to be a settings plugin and is abstract because it uses <<custom_gradle_types.adoc#property_injection,property injection>>.
 <2> Access is needed to the link:{javadocPath}/org/gradle/jvm/toolchain/JavaToolchainResolverRegistry.html[JavaToolchainResolverRegistry] Gradle service to register the resolver implementation.
