--- a/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
@@ -11,7 +11,7 @@ Code examples will be provided in Java, but plugin authors should feel free to u
 ====
 
 == Core logic
-The main thing toolchain resolver plugins need to provide is the logic of mapping a toolchain request to a download URI.
+The main thing toolchain resolver plugins need to provide is the logic of mapping a toolchain request to a download response.
 They do this by implementing link:{javadocPath}/org/gradle/jvm/toolchain/JavaToolchainResolver.html[JavaToolchainResolver]:
 
 .JavaToolchainResolverImplementation.java
@@ -20,7 +20,7 @@ They do this by implementing link:{javadocPath}/org/gradle/jvm/toolchain/JavaToo
 include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverImplementation.java[]
 ----
 <1> The implementation needs to be `abstract` because `JavaToolchainResolver` is a <<build_services.adoc#build_services,build service>> and those do have abstract methods with dynamic implementations provided by Gradle at runtime.
-<2> The mapping method returns a `URI` wrapped in an `Optional`, which is empty if, and only if, this resolver implementation can't provide a download link for the requested toolchain.
+<2> The mapping method returns a download response wrapped in an `Optional`, which is empty if, and only if, this resolver implementation can't provide a matching toolchain.
 
 == Plugin application
 
