--- a/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
@@ -15,7 +15,7 @@
 [[toolchain_plugins]]
 = Toolchain Resolver Plugins
 
-In Gradle version 7.6 and above, Gradle provides a way to define toolchains in plugins.
+In Gradle version 7.6 and above, Gradle provides a way to define Java toolchain auto-provisioning logic in plugins.
 This page explains how to author a toolchain resolver plugin.
 
 == Provide a download URI
