--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -140,9 +140,11 @@ tasks.withType<KotlinCompile>().configureEach {
 }
 ```
 
-==== Upgrade to Groovy 3.0.12
+==== Upgrade to Groovy 3.0.13
 
-Groovy has been updated to https://groovy-lang.org/changelogs/changelog-3.0.12.html[Groovy 3.0.12].
+Groovy has been updated to https://groovy-lang.org/changelogs/changelog-3.0.13.html[Groovy 3.0.13].
+
+Since the previous version was 3.0.11, the https://groovy-lang.org/changelogs/changelog-3.0.12.html[3.0.12 changes] are also included.
 
 ==== Upgrade to PMD 6.48.0
 
