--- a/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
+++ b/subprojects/docs/src/docs/userguide/jvm/toolchain_plugins.adoc
@@ -17,7 +17,7 @@ They do this by implementing link:{javadocPath}/org/gradle/jvm/toolchain/JavaToo
 .JavaToolchainResolverImplementation.java
 [source,java]
 ----
-include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverImplementation.java[]
+include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverImplementation.java[tags=java-toolchain-resolver-implementation]
 ----
 <1> The implementation needs to be `abstract` because `JavaToolchainResolver` is a <<build_services.adoc#build_services,build service>> and those do have abstract methods with dynamic implementations provided by Gradle at runtime.
 <2> The mapping method returns a download response wrapped in an `Optional`, which is empty if, and only if, this resolver implementation can't provide a matching toolchain.
@@ -29,7 +29,7 @@ To wire the `JavaToolchainResolver` implementation into Gradle a settings plugin
 .JavaToolchainResolverPlugin.java
 [source,java]
 ----
-include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverPlugin.java[]
+include::{snippetsPath}/java/toolchain-management/groovy/buildSrc/src/main/java/org/myorg/JavaToolchainResolverPlugin.java[tags=java-toolchain-resolver-plugin]
 ----
 <1> The plugin needs to be a settings plugin and is abstract because it uses <<custom_gradle_types.adoc#property_injection,property injection>>.
 <2> Access is needed to the link:{javadocPath}/org/gradle/jvm/toolchain/JavaToolchainResolverRegistry.html[JavaToolchainResolverRegistry] Gradle service to register the resolver implementation.
