--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -171,6 +171,11 @@ eclipse {
 }
 ```
 
+==== Simplifying PMD custom rules configuration
+
+Previously to configure PMD to use custom rules and ignore the default ones you have to explicitly clear default rules with following line `ruleSets = []`.
+In the Gradle 8.0 it's done by default as soon as `ruleSetConfig` or `ruleSetFiles` was set to non-empty value.
+
 [[changes_7.6]]
 == Upgrading from 7.5 and earlier
 
