Make changing the testing framework after setting options an error
There are three scenarios to consider:
1. A Test task created without test suites
2. A Test task created by the built-in test suite (named "test")
3. A Test task created by a user-defined test suite

Behavior for (1) and (2) is similar. We default to using JUnit4 and allow
users to call useJUnit, useJUnitPlatform and useTestNG as much as they
like as long as they don't set any options.

After setting options, calls to useXXX will fail.

(3) is the most restrictive. useXXX methods are not allowed at all.
The test framework must be set in the test suite and options can only
be configured via options {}.

Once options have been set, calls to useXXX on the test suite will
also fail.

Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -58,6 +58,31 @@ Usage of invalid Java toolchain specifications is no longer supported.
 Related build errors can be avoided by making sure that language version is set on all toolchain specifications.
 See <<toolchains#sec:configuring_toolchain_specifications,user manual>> for more information.
 
+==== Changing test framework after setting test framework options is now an error
+
+When configuring the built-in test task for Java/Groovy/Scala projects, Gradle no longer allows you to
+change the test framework used by the `Test` task after configuring options. This was deprecated and silently
+discarded configuration in some cases.
+
+This now produces an error:
+```
+test {
+   options {
+   }
+
+   useJUnitPlatform()
+}
+```
+You should either set the test framework before configuring options or look into migrating to the <<jvm_test_suite_plugin,JVM test suite plugin>>.
+```
+test {
+   // select test framework before configuring options
+   useJUnitPlatform()
+   options {
+   }
+}
+```
+
 === Removed APIs
 
 ==== Legacy ArtifactTransform API
