Fix link to JVM test suite plugin chapter

--- a/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
+++ b/subprojects/docs/src/docs/userguide/migration/upgrading_version_7.adoc
@@ -73,7 +73,7 @@ test {
    useJUnitPlatform()
 }
 ```
-You should either set the test framework before configuring options or look into migrating to the <<jvm_test_suite_plugin,JVM test suite plugin>>.
+You should either set the test framework before configuring options or look into migrating to the <<jvm_test_suite_plugin#jvm_test_suite_plugin,JVM Test Suite Plugin>>.
 ```
 test {
    // select test framework before configuring options
