--- a/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
+++ b/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
@@ -85,7 +85,7 @@ Runs the tasks selected at the end of the configuration phase.
 === Builds
 
 A build is an execution of a collection of tasks in a Gradle project. You instantiate a build with a Gradle command
-via the CLI or an IDE. In the command, you specify a task or tasks. Gradle determines which tasks to run based
+via the CLI or an IDE. In the command, you specify a task or tasks. Gradle determines the complete set of tasks to run based
 on inter-task dependencies, and runs the smallest set of tasks required to complete the specified task and its dependencies.
 
 == Optimizations
