--- a/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
+++ b/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
@@ -35,7 +35,7 @@ You can readily extend Gradle to provide your own build logic with custom tasks 
 See Android builds for an example: they add many new build concepts such as flavors and build types.
 IDE support::
 Several major IDEs enable imports and interaction with Gradle builds, including Android Studio, IntelliJ IDEA, Eclipse, and NetBeans.
-Gradle can also provides generate the solution files required to load a project into Visual Studio.
+Gradle can also generate the solution files required to load a project into Visual Studio.
 Insight::
 https://scans.gradle.com/[Build scans] provide extensive information about a build that you can use to identify issues.
 You can use build scans to identify problems with a build's performance, and even share them for debugging help.
