Rephrase Gradle imports list intro Signed-off-by: Adam <897017+aSemy@users.noreply.github.com>

--- a/subprojects/docs/src/docs/userguide/authoring-builds/writing_build_scripts.adoc
+++ b/subprojects/docs/src/docs/userguide/authoring-builds/writing_build_scripts.adoc
@@ -297,7 +297,7 @@ To make build scripts more concise, Gradle automatically adds a set of import st
 As a result, instead of writing `throw new org.gradle.api.tasks.StopExecutionException()`,
 you can write `throw new StopExecutionException()` instead.
 
-The following list shows the imports Gradle adds to each script:
+Gradle implicitly adds the following imports to each script:
 
 .Gradle default imports
 [source,groovy]
