--- a/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
+++ b/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
@@ -37,7 +37,7 @@ IDE support::
 Several major IDEs provide interaction with Gradle builds, including Android Studio, IntelliJ IDEA, Eclipse, VSCode, and NetBeans.
 Gradle can also generate the solution files required to load a project into Visual Studio.
 Insight::
-https://scans.gradle.com/[Build scans] provide extensive information about a build that you can use to identify issues.
+https://scans.gradle.com/[Build Scan™] provides extensive information about a build that you can use to identify issues.
 You can use build scans to identify problems with a build's performance, and even share them for debugging help.
 
 == Concepts
