--- a/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
+++ b/subprojects/docs/src/docs/userguide/what_is_gradle.adoc
@@ -48,7 +48,7 @@ It's helpful to know the following concepts before you dive into the details of 
 
 Projects are the things that Gradle builds.
 Projects contain a build script, which is a file located in the project's root directory named `build.gradle` or `build.gradle.kts`.
-Builds scripts define tasks, dependencies, plugins, and other configuration for your build.
+Builds scripts define tasks, dependencies, plugins, and other configuration for that project.
 A single project can contain many subprojects, which can each contain their own subprojects.
 
 === Tasks
